--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: EditImputeCont
 Type: Package
 Title: Simultaneous Edit-Imputation for Continuous Microdata
-Version: 6.4.5
-Date: 2015-01-27
+Version: 1.0.0
+Date: 2015-06-09
 Author: Quanli Wang, Hang J. Kim, Jerome P. Reiter, Lawrence H. Cox and Alan F. Karr
 Maintainer: Quanli Wang <quanli@stat.duke.edu>
-Description: enable initilization for D_initial and S_initial to the code
-License: GPL(>= 3)
-Depends: Rcpp (>= 0.11.1)
+Description: An integrated editing and imputation method for continuous microdata under linear constraints is implemented. It relies on a Bayesian nonparametric hierarchical modeling approach in which the joint distribution of the data is estimated by a flexible joint probability model. The generated edit-imputed data are guaranteed to satisfy all imposed edit rules, whose types include ratio edits, balance edits and range restrictions.
+License: GPL (>= 3)
+Depends: Rcpp (>= 0.11.5), methods, editrules
 LinkingTo: Rcpp
 RcppModules: cbei
-Packaged: 2015-05-05 14:16:14 UTC; quanli
+NeedsCompilation: yes
+Packaged: 2015-06-11 12:27:26 UTC; quanli
+Repository: CRAN
+Date/Publication: 2015-06-11 18:22:42
