--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: EditImputeCont
 Type: Package
 Title: Simultaneous Edit-Imputation for Continuous Microdata
-Version: 1.0.2
-Date: 2016-10-30
+Version: 1.1.0
+Date: 2017-10-12
 Author: Quanli Wang, Hang J. Kim, Jerome P. Reiter, Lawrence H. Cox and Alan F. Karr
 Maintainer: Quanli Wang <quanli@stat.duke.edu>
 Description: An integrated editing and imputation method for continuous microdata under linear constraints is implemented. It relies on a Bayesian nonparametric hierarchical modeling approach as described in Kim et al. (2015) <DOI:10.1080/01621459.2015.1040881>. In this approach, the joint distribution of the data is estimated by a flexible joint probability model. The generated edit-imputed data are guaranteed to satisfy all imposed edit rules, whose types include ratio edits, balance edits and range restrictions.
@@ -13,3 +13,5 @@ RcppModules: cbei
 URL: https://github.com/QuanliWang/EditImputeCont
 NeedsCompilation: yes
 Repository: CRAN
+Packaged: 2017-10-12 17:59:06 UTC; hangjoonkim
+Date/Publication: 2017-6-30 07:57:01
